@@ -15,6 +15,8 @@
 ## along with M2-Planet.  If not, see <http://www.gnu.org/licenses/>.
 
 * Current
+** Added
+Added support for global initializer list for structs of integers.
 
 * 1.12.1 - 2025-03-16
 ** Fixed
